@@ -24,7 +24,7 @@ import junit.framework.TestCase;
 /**
  * Tests ArrayUtils add methods.
  *
- * @version $Id: ArrayUtilsAddTest.java 1153490 2011-08-03 13:53:35Z ggregory $
+ * @version $Id: ArrayUtilsAddTest.java 1088899 2011-04-05 05:31:27Z bayard $
  */
 public class ArrayUtilsAddTest extends TestCase {
 
@@ -199,14 +199,14 @@ public class ArrayUtilsAddTest extends TestCase {
         assertTrue(Arrays.equals((new String[]{"a", "b", "c", "d"}), newArray));
         assertEquals(String.class, newArray.getClass().getComponentType());
 
-        Number[] numberArray1 = new Number[]{Integer.valueOf(1), Double.valueOf(2)};
-        newArray = ArrayUtils.add(numberArray1, Float.valueOf(3));
-        assertTrue(Arrays.equals((new Number[]{Integer.valueOf(1), Double.valueOf(2), Float.valueOf(3)}), newArray));
+        Number[] numberArray1 = new Number[]{new Integer(1), new Double(2)};
+        newArray = ArrayUtils.add(numberArray1, new Float(3));
+        assertTrue(Arrays.equals((new Number[]{new Integer(1), new Double(2), new Float(3)}), newArray));
         assertEquals(Number.class, newArray.getClass().getComponentType());
 
         numberArray1 = null;
-        newArray = ArrayUtils.add(numberArray1, Float.valueOf(3));
-        assertTrue(Arrays.equals((new Float[]{Float.valueOf(3)}), newArray));
+        newArray = ArrayUtils.add(numberArray1, new Float(3));
+        assertTrue(Arrays.equals((new Float[]{new Float(3)}), newArray));
         assertEquals(Float.class, newArray.getClass().getComponentType());
     }
     
