@@ -16,22 +16,23 @@
  */
 package org.apache.commons.lang3;
 
-import static org.junit.Assert.*;
-
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
 
-import org.junit.Test;
+import junit.framework.TestCase;
 
 /**
  * Unit tests {@link org.apache.commons.lang3.BooleanUtils}.
  *
- * @version $Id: BooleanUtilsTest.java 1153484 2011-08-03 13:39:42Z ggregory $
+ * @version $Id: BooleanUtilsTest.java 1133336 2011-06-08 10:51:27Z scolebourne $
  */
-public class BooleanUtilsTest {
+public class BooleanUtilsTest extends TestCase {
+
+    public BooleanUtilsTest(String name) {
+        super(name);
+    }
 
     //-----------------------------------------------------------------------
-    @Test
     public void testConstructor() {
         assertNotNull(new BooleanUtils());
         Constructor<?>[] cons = BooleanUtils.class.getDeclaredConstructors();
@@ -42,7 +43,6 @@ public class BooleanUtilsTest {
     }
     
     //-----------------------------------------------------------------------
-    @Test
     public void test_negate_Boolean() {
         assertSame(null, BooleanUtils.negate(null));
         assertSame(Boolean.TRUE, BooleanUtils.negate(Boolean.FALSE));
@@ -50,14 +50,12 @@ public class BooleanUtilsTest {
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void test_isTrue_Boolean() {
         assertEquals(true, BooleanUtils.isTrue(Boolean.TRUE));
         assertEquals(false, BooleanUtils.isTrue(Boolean.FALSE));
         assertEquals(false, BooleanUtils.isTrue((Boolean) null));
     }
 
-    @Test
     public void test_isNotTrue_Boolean() {
         assertEquals(false, BooleanUtils.isNotTrue(Boolean.TRUE));
         assertEquals(true, BooleanUtils.isNotTrue(Boolean.FALSE));
@@ -65,14 +63,12 @@ public class BooleanUtilsTest {
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void test_isFalse_Boolean() {
         assertEquals(false, BooleanUtils.isFalse(Boolean.TRUE));
         assertEquals(true, BooleanUtils.isFalse(Boolean.FALSE));
         assertEquals(false, BooleanUtils.isFalse((Boolean) null));
     }
 
-    @Test
     public void test_isNotFalse_Boolean() {
         assertEquals(true, BooleanUtils.isNotFalse(Boolean.TRUE));
         assertEquals(false, BooleanUtils.isNotFalse(Boolean.FALSE));
@@ -80,14 +76,12 @@ public class BooleanUtilsTest {
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBoolean_Boolean() {
         assertEquals(true, BooleanUtils.toBoolean(Boolean.TRUE));
         assertEquals(false, BooleanUtils.toBoolean(Boolean.FALSE));
         assertEquals(false, BooleanUtils.toBoolean((Boolean) null));
     }
 
-    @Test
     public void test_toBooleanDefaultIfNull_Boolean_boolean() {
         assertEquals(true, BooleanUtils.toBooleanDefaultIfNull(Boolean.TRUE, true));
         assertEquals(true, BooleanUtils.toBooleanDefaultIfNull(Boolean.TRUE, false));
@@ -99,147 +93,127 @@ public class BooleanUtilsTest {
 
     //-----------------------------------------------------------------------
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBoolean_int() {
         assertEquals(true, BooleanUtils.toBoolean(1));
         assertEquals(true, BooleanUtils.toBoolean(-1));
         assertEquals(false, BooleanUtils.toBoolean(0));
     }
     
-    @Test
     public void test_toBooleanObject_int() {
         assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(1));
         assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(-1));
         assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(0));
     }
     
-    @Test
     public void test_toBooleanObject_Integer() {
-        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(Integer.valueOf(1)));
-        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(Integer.valueOf(-1)));
-        assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(Integer.valueOf(0)));
+        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(new Integer(1)));
+        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(new Integer(-1)));
+        assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(new Integer(0)));
         assertEquals(null, BooleanUtils.toBooleanObject((Integer) null));
     }
     
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBoolean_int_int_int() {
         assertEquals(true, BooleanUtils.toBoolean(6, 6, 7));
         assertEquals(false, BooleanUtils.toBoolean(7, 6, 7));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBoolean_int_int_int_noMatch() {
-        BooleanUtils.toBoolean(8, 6, 7);
+        try {
+            BooleanUtils.toBoolean(8, 6, 7);
+            fail();
+        } catch (IllegalArgumentException ex) {}
     }
     
-    @Test
     public void test_toBoolean_Integer_Integer_Integer() {
-        Integer six = Integer.valueOf(6);
-        Integer seven = Integer.valueOf(7);
+        Integer six = new Integer(6);
+        Integer seven = new Integer(7);
 
         assertEquals(true, BooleanUtils.toBoolean((Integer) null, null, seven));
         assertEquals(false, BooleanUtils.toBoolean((Integer) null, six, null));
-
-        assertEquals(true, BooleanUtils.toBoolean(Integer.valueOf(6), six, seven));
-        assertEquals(false, BooleanUtils.toBoolean(Integer.valueOf(7), six, seven));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBoolean_Integer_Integer_Integer_nullValue() {
-        BooleanUtils.toBoolean(null, Integer.valueOf(6), Integer.valueOf(7));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBoolean_Integer_Integer_Integer_noMatch() {
-        BooleanUtils.toBoolean(Integer.valueOf(8), Integer.valueOf(6), Integer.valueOf(7));
+        try {
+            BooleanUtils.toBoolean(null, six, seven);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+        
+        assertEquals(true, BooleanUtils.toBoolean(new Integer(6), six, seven));
+        assertEquals(false, BooleanUtils.toBoolean(new Integer(7), six, seven));
+        try {
+            BooleanUtils.toBoolean(new Integer(8), six, seven);
+            fail();
+        } catch (IllegalArgumentException ex) {}
     }
     
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBooleanObject_int_int_int() {
         assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(6, 6, 7, 8));
         assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(7, 6, 7, 8));
         assertEquals(null, BooleanUtils.toBooleanObject(8, 6, 7, 8));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBooleanObject_int_int_int_noMatch() {
-        BooleanUtils.toBooleanObject(9, 6, 7, 8);
+        try {
+            BooleanUtils.toBooleanObject(9, 6, 7, 8);
+            fail();
+        } catch (IllegalArgumentException ex) {}
     }
     
-    @Test
     public void test_toBooleanObject_Integer_Integer_Integer_Integer() {
-        Integer six = Integer.valueOf(6);
-        Integer seven = Integer.valueOf(7);
-        Integer eight = Integer.valueOf(8);
+        Integer six = new Integer(6);
+        Integer seven = new Integer(7);
+        Integer eight = new Integer(8);
 
         assertSame(Boolean.TRUE, BooleanUtils.toBooleanObject((Integer) null, null, seven, eight));
         assertSame(Boolean.FALSE, BooleanUtils.toBooleanObject((Integer) null, six, null, eight));
         assertSame(null, BooleanUtils.toBooleanObject((Integer) null, six, seven, null));
-
-        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(Integer.valueOf(6), six, seven, eight));
-        assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(Integer.valueOf(7), six, seven, eight));
-        assertEquals(null, BooleanUtils.toBooleanObject(Integer.valueOf(8), six, seven, eight));
+        try {
+            BooleanUtils.toBooleanObject(null, six, seven, eight);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+        
+        assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject(new Integer(6), six, seven, eight));
+        assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject(new Integer(7), six, seven, eight));
+        assertEquals(null, BooleanUtils.toBooleanObject(new Integer(8), six, seven, eight));
+        try {
+            BooleanUtils.toBooleanObject(new Integer(9), six, seven, eight);
+            fail();
+        } catch (IllegalArgumentException ex) {}
     }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBooleanObject_Integer_Integer_Integer_Integer_nullValue() {
-        BooleanUtils.toBooleanObject(null, Integer.valueOf(6), Integer.valueOf(7), Integer.valueOf(8));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBooleanObject_Integer_Integer_Integer_Integer_noMatch() {
-        BooleanUtils.toBooleanObject(Integer.valueOf(9), Integer.valueOf(6), Integer.valueOf(7), Integer.valueOf(8));
-    }
-
+    
     //-----------------------------------------------------------------------
-    @Test
     public void test_toInteger_boolean() {
         assertEquals(1, BooleanUtils.toInteger(true));
         assertEquals(0, BooleanUtils.toInteger(false));
     }
     
-    @Test
     public void test_toIntegerObject_boolean() {
-        assertEquals(Integer.valueOf(1), BooleanUtils.toIntegerObject(true));
-        assertEquals(Integer.valueOf(0), BooleanUtils.toIntegerObject(false));
+        assertEquals(new Integer(1), BooleanUtils.toIntegerObject(true));
+        assertEquals(new Integer(0), BooleanUtils.toIntegerObject(false));
     }
     
-    @Test
     public void test_toIntegerObject_Boolean() {
-        assertEquals(Integer.valueOf(1), BooleanUtils.toIntegerObject(Boolean.TRUE));
-        assertEquals(Integer.valueOf(0), BooleanUtils.toIntegerObject(Boolean.FALSE));
+        assertEquals(new Integer(1), BooleanUtils.toIntegerObject(Boolean.TRUE));
+        assertEquals(new Integer(0), BooleanUtils.toIntegerObject(Boolean.FALSE));
         assertEquals(null, BooleanUtils.toIntegerObject((Boolean) null));
     }
     
     //-----------------------------------------------------------------------
-    @Test
     public void test_toInteger_boolean_int_int() {
         assertEquals(6, BooleanUtils.toInteger(true, 6, 7));
         assertEquals(7, BooleanUtils.toInteger(false, 6, 7));
     }
     
-    @Test
     public void test_toInteger_Boolean_int_int_int() {
         assertEquals(6, BooleanUtils.toInteger(Boolean.TRUE, 6, 7, 8));
         assertEquals(7, BooleanUtils.toInteger(Boolean.FALSE, 6, 7, 8));
         assertEquals(8, BooleanUtils.toInteger(null, 6, 7, 8));
     }
     
-    @Test
     public void test_toIntegerObject_boolean_Integer_Integer() {
-        Integer six = Integer.valueOf(6);
-        Integer seven = Integer.valueOf(7);
+        Integer six = new Integer(6);
+        Integer seven = new Integer(7);
         assertEquals(six, BooleanUtils.toIntegerObject(true, six, seven));
         assertEquals(seven, BooleanUtils.toIntegerObject(false, six, seven));
     }
     
-    @Test
     public void test_toIntegerObject_Boolean_Integer_Integer_Integer() {
-        Integer six = Integer.valueOf(6);
-        Integer seven = Integer.valueOf(7);
-        Integer eight = Integer.valueOf(8);
+        Integer six = new Integer(6);
+        Integer seven = new Integer(7);
+        Integer eight = new Integer(8);
         assertEquals(six, BooleanUtils.toIntegerObject(Boolean.TRUE, six, seven, eight));
         assertEquals(seven, BooleanUtils.toIntegerObject(Boolean.FALSE, six, seven, eight));
         assertEquals(eight, BooleanUtils.toIntegerObject((Boolean) null, six, seven, eight));
@@ -248,7 +222,6 @@ public class BooleanUtilsTest {
     
     //-----------------------------------------------------------------------
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBooleanObject_String() {
         assertEquals(null, BooleanUtils.toBooleanObject((String) null));
         assertEquals(null, BooleanUtils.toBooleanObject(""));
@@ -282,29 +255,29 @@ public class BooleanUtilsTest {
         assertEquals(null, BooleanUtils.toBooleanObject("yoo"));
     }
     
-    @Test
     public void test_toBooleanObject_String_String_String_String() {
         assertSame(Boolean.TRUE, BooleanUtils.toBooleanObject((String) null, null, "N", "U"));
         assertSame(Boolean.FALSE, BooleanUtils.toBooleanObject((String) null, "Y", null, "U"));
         assertSame(null, BooleanUtils.toBooleanObject((String) null, "Y", "N", null));
+        try {
+            BooleanUtils.toBooleanObject((String) null, "Y", "N", "U");
+            fail();
+        } catch (IllegalArgumentException ex) {}
 
         assertEquals(Boolean.TRUE, BooleanUtils.toBooleanObject("Y", "Y", "N", "U"));
         assertEquals(Boolean.FALSE, BooleanUtils.toBooleanObject("N", "Y", "N", "U"));
         assertEquals(null, BooleanUtils.toBooleanObject("U", "Y", "N", "U"));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBooleanObject_String_String_String_String_nullValue() {
-        BooleanUtils.toBooleanObject((String) null, "Y", "N", "U");
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBooleanObject_String_String_String_String_noMatch() {
-        BooleanUtils.toBooleanObject("X", "Y", "N", "U");
+        try {
+            BooleanUtils.toBooleanObject(null, "Y", "N", "U");
+            fail();
+        } catch (IllegalArgumentException ex) {}
+        try {
+            BooleanUtils.toBooleanObject("X", "Y", "N", "U");
+            fail();
+        } catch (IllegalArgumentException ex) {}
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void test_toBoolean_String() {
         assertEquals(false, BooleanUtils.toBoolean((String) null));
         assertEquals(false, BooleanUtils.toBoolean(""));
@@ -351,7 +324,6 @@ public class BooleanUtilsTest {
         assertEquals(false, BooleanUtils.toBoolean("yoo"));
     }
 
-    @Test
     public void test_toBoolean_String_String_String() {
         assertEquals(true, BooleanUtils.toBoolean((String) null, null, "N"));
         assertEquals(false, BooleanUtils.toBoolean((String) null, "Y", null));
@@ -359,44 +331,38 @@ public class BooleanUtilsTest {
         assertEquals(true, BooleanUtils.toBoolean("Y", new String("Y"), new String("N")));
         assertEquals(false, BooleanUtils.toBoolean("N", "Y", "N"));
         assertEquals(false, BooleanUtils.toBoolean("N", new String("Y"), new String("N")));
+        try {
+            BooleanUtils.toBoolean(null, "Y", "N");
+            fail();
+        } catch (IllegalArgumentException ex) {}
+        try {
+            BooleanUtils.toBoolean("X", "Y", "N");
+            fail();
+        } catch (IllegalArgumentException ex) {}
         assertEquals(true, BooleanUtils.toBoolean((String) null, null, null));
         assertEquals(true, BooleanUtils.toBoolean("Y", "Y", "Y"));
         assertEquals(true, BooleanUtils.toBoolean("Y", new String("Y"), new String("Y")));
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBoolean_String_String_String_nullValue() {
-        BooleanUtils.toBoolean(null, "Y", "N");
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void test_toBoolean_String_String_String_noMatch() {
-        BooleanUtils.toBoolean("X", "Y", "N");
-    }
-
     //-----------------------------------------------------------------------
-    @Test
     public void test_toStringTrueFalse_Boolean() {
         assertEquals(null, BooleanUtils.toStringTrueFalse((Boolean) null));
         assertEquals("true", BooleanUtils.toStringTrueFalse(Boolean.TRUE));
         assertEquals("false", BooleanUtils.toStringTrueFalse(Boolean.FALSE));
     }
     
-    @Test
     public void test_toStringOnOff_Boolean() {
         assertEquals(null, BooleanUtils.toStringOnOff((Boolean) null));
         assertEquals("on", BooleanUtils.toStringOnOff(Boolean.TRUE));
         assertEquals("off", BooleanUtils.toStringOnOff(Boolean.FALSE));
     }
     
-    @Test
     public void test_toStringYesNo_Boolean() {
         assertEquals(null, BooleanUtils.toStringYesNo((Boolean) null));
         assertEquals("yes", BooleanUtils.toStringYesNo(Boolean.TRUE));
         assertEquals("no", BooleanUtils.toStringYesNo(Boolean.FALSE));
     }
     
-    @Test
     public void test_toString_Boolean_String_String_String() {
         assertEquals("U", BooleanUtils.toString((Boolean) null, "Y", "N", "U"));
         assertEquals("Y", BooleanUtils.toString(Boolean.TRUE, "Y", "N", "U"));
@@ -404,25 +370,21 @@ public class BooleanUtilsTest {
     }
     
     //-----------------------------------------------------------------------
-    @Test
     public void test_toStringTrueFalse_boolean() {
         assertEquals("true", BooleanUtils.toStringTrueFalse(true));
         assertEquals("false", BooleanUtils.toStringTrueFalse(false));
     }
     
-    @Test
     public void test_toStringOnOff_boolean() {
         assertEquals("on", BooleanUtils.toStringOnOff(true));
         assertEquals("off", BooleanUtils.toStringOnOff(false));
     }
     
-    @Test
     public void test_toStringYesNo_boolean() {
         assertEquals("yes", BooleanUtils.toStringYesNo(true));
         assertEquals("no", BooleanUtils.toStringYesNo(false));
     }
     
-    @Test
     public void test_toString_boolean_String_String_String() {
         assertEquals("Y", BooleanUtils.toString(true, "Y", "N"));
         assertEquals("N", BooleanUtils.toString(false, "Y", "N"));
@@ -430,17 +392,21 @@ public class BooleanUtilsTest {
     
     //  testXor
     //  -----------------------------------------------------------------------
-    @Test(expected = IllegalArgumentException.class)
     public void testXor_primitive_nullInput() {
-        BooleanUtils.xor((boolean[]) null);
+        final boolean[] b = null;
+        try {
+            BooleanUtils.xor(b);
+            fail("Exception was not thrown for null input.");
+        } catch (IllegalArgumentException ex) {}
     }
 
-    @Test(expected = IllegalArgumentException.class)
     public void testXor_primitive_emptyInput() {
-        BooleanUtils.xor(new boolean[] {});
+        try {
+            BooleanUtils.xor(new boolean[] {});
+            fail("Exception was not thrown for empty input.");
+        } catch (IllegalArgumentException ex) {}
     }
 
-    @Test
     public void testXor_primitive_validInput_2items() {
         assertTrue(
             "True result for (true, true)",
@@ -459,7 +425,6 @@ public class BooleanUtilsTest {
             BooleanUtils.xor(new boolean[] { false, true }));
     }
 
-    @Test
     public void testXor_primitive_validInput_3items() {
         assertTrue(
             "False result for (false, false, true)",
@@ -494,22 +459,28 @@ public class BooleanUtilsTest {
             ! BooleanUtils.xor(new boolean[] { false, true, true }));
     }
 
-    @Test(expected = IllegalArgumentException.class)
     public void testXor_object_nullInput() {
-        BooleanUtils.xor((Boolean[]) null);
+        final Boolean[] b = null;
+        try {
+            BooleanUtils.xor(b);
+            fail("Exception was not thrown for null input.");
+        } catch (IllegalArgumentException ex) {}
     }
 
-    @Test(expected = IllegalArgumentException.class)
     public void testXor_object_emptyInput() {
-        BooleanUtils.xor(new Boolean[] {});
+        try {
+            BooleanUtils.xor(new Boolean[] {});
+            fail("Exception was not thrown for empty input.");
+        } catch (IllegalArgumentException ex) {}
     }
     
-    @Test(expected = IllegalArgumentException.class)
     public void testXor_object_nullElementInput() {
-        BooleanUtils.xor(new Boolean[] {null});
+        try {
+            BooleanUtils.xor(new Boolean[] {null});
+            fail("Exception was not thrown for null element input.");
+        } catch (IllegalArgumentException ex) {}
     }
 
-    @Test
     public void testXor_object_validInput_2items() {
         assertTrue(
             "True result for (true, true)",
@@ -536,7 +507,6 @@ public class BooleanUtilsTest {
                 .booleanValue());
     }
 
-    @Test
     public void testXor_object_validInput_3items() {
         assertTrue(
             "False result for (false, false, true)",
@@ -609,372 +579,7 @@ public class BooleanUtilsTest {
                         Boolean.TRUE,
                         Boolean.TRUE })
                 .booleanValue());
+                
     }
 
-    //  testAnd
-    //  -----------------------------------------------------------------------
-    @Test(expected = IllegalArgumentException.class)
-    public void testAnd_primitive_nullInput() {
-        BooleanUtils.and((boolean[]) null);
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testAnd_primitive_emptyInput() {
-        BooleanUtils.and(new boolean[] {});
-    }
-    
-    @Test
-    public void testAnd_primitive_validInput_2items() {
-        assertTrue(
-            "False result for (true, true)",
-            BooleanUtils.and(new boolean[] { true, true }));
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.and(new boolean[] { false, false }));
-        
-        assertTrue(
-            "True result for (true, false)",
-            ! BooleanUtils.and(new boolean[] { true, false }));
-        
-        assertTrue(
-            "True result for (false, true)",
-            ! BooleanUtils.and(new boolean[] { false, true }));
-    }
-    
-    @Test
-    public void testAnd_primitive_validInput_3items() {
-        assertTrue(
-            "True result for (false, false, true)",
-            ! BooleanUtils.and(new boolean[] { false, false, true }));
-        
-        assertTrue(
-            "True result for (false, true, false)",
-            ! BooleanUtils.and(new boolean[] { false, true, false }));
-        
-        assertTrue(
-            "True result for (true, false, false)",
-            ! BooleanUtils.and(new boolean[] { true, false, false }));
-        
-        assertTrue(
-            "False result for (true, true, true)",
-            BooleanUtils.and(new boolean[] { true, true, true }));
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.and(new boolean[] { false, false, false }));
-        
-        assertTrue(
-            "True result for (true, true, false)",
-            ! BooleanUtils.and(new boolean[] { true, true, false }));
-        
-        assertTrue(
-            "True result for (true, false, true)",
-            ! BooleanUtils.and(new boolean[] { true, false, true }));
-        
-        assertTrue(
-            "True result for (false, true, true)",
-            ! BooleanUtils.and(new boolean[] { false, true, true }));
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testAnd_object_nullInput() {
-        BooleanUtils.and((Boolean[]) null);
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testAnd_object_emptyInput() {
-        BooleanUtils.and(new Boolean[] {});
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testAnd_object_nullElementInput() {
-        BooleanUtils.and(new Boolean[] {null});
-    }
-    
-    @Test
-    public void testAnd_object_validInput_2items() {
-        assertTrue(
-            "False result for (true, true)",
-            BooleanUtils
-            .and(new Boolean[] { Boolean.TRUE, Boolean.TRUE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils
-            .and(new Boolean[] { Boolean.FALSE, Boolean.FALSE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (true, false)",
-            ! BooleanUtils
-            .and(new Boolean[] { Boolean.TRUE, Boolean.FALSE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (false, true)",
-            ! BooleanUtils
-            .and(new Boolean[] { Boolean.FALSE, Boolean.TRUE })
-            .booleanValue());
-    }
-    
-    @Test
-    public void testAnd_object_validInput_3items() {
-        assertTrue(
-            "True result for (false, false, true)",
-            ! BooleanUtils
-            .and(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.FALSE,
-                    Boolean.TRUE })
-                    .booleanValue());
-        
-        assertTrue(
-            "True result for (false, true, false)",
-            ! BooleanUtils
-            .and(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.TRUE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "True result for (true, false, false)",
-            ! BooleanUtils
-            .and(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.FALSE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (true, true, true)",
-            BooleanUtils
-            .and(new Boolean[] { Boolean.TRUE, Boolean.TRUE, Boolean.TRUE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.and(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.FALSE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "True result for (true, true, false)",
-            ! BooleanUtils.and(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.TRUE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "True result for (true, false, true)",
-            ! BooleanUtils.and(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.FALSE,
-                    Boolean.TRUE })
-                    .booleanValue());
-        
-        assertTrue(
-            "True result for (false, true, true)",
-            ! BooleanUtils.and(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.TRUE,
-                    Boolean.TRUE })
-                    .booleanValue());
-    }
-    
-    //  testOr
-    //  -----------------------------------------------------------------------
-    @Test(expected = IllegalArgumentException.class)
-    public void testOr_primitive_nullInput() {
-        BooleanUtils.or((boolean[]) null);
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testOr_primitive_emptyInput() {
-        BooleanUtils.or(new boolean[] {});
-    }
-    
-    @Test
-    public void testOr_primitive_validInput_2items() {
-        assertTrue(
-            "False result for (true, true)",
-            BooleanUtils.or(new boolean[] { true, true }));
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.or(new boolean[] { false, false }));
-        
-        assertTrue(
-            "False result for (true, false)",
-            BooleanUtils.or(new boolean[] { true, false }));
-        
-        assertTrue(
-            "False result for (false, true)",
-            BooleanUtils.or(new boolean[] { false, true }));
-    }
-    
-    @Test
-    public void testOr_primitive_validInput_3items() {
-        assertTrue(
-            "False result for (false, false, true)",
-            BooleanUtils.or(new boolean[] { false, false, true }));
-        
-        assertTrue(
-            "False result for (false, true, false)",
-            BooleanUtils.or(new boolean[] { false, true, false }));
-        
-        assertTrue(
-            "False result for (true, false, false)",
-            BooleanUtils.or(new boolean[] { true, false, false }));
-        
-        assertTrue(
-            "False result for (true, true, true)",
-            BooleanUtils.or(new boolean[] { true, true, true }));
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.or(new boolean[] { false, false, false }));
-        
-        assertTrue(
-            "False result for (true, true, false)",
-            BooleanUtils.or(new boolean[] { true, true, false }));
-        
-        assertTrue(
-            "False result for (true, false, true)",
-            BooleanUtils.or(new boolean[] { true, false, true }));
-        
-        assertTrue(
-            "False result for (false, true, true)",
-            BooleanUtils.or(new boolean[] { false, true, true }));
-    
-    }
-    @Test(expected = IllegalArgumentException.class)
-    public void testOr_object_nullInput() {
-        BooleanUtils.or((Boolean[]) null);
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testOr_object_emptyInput() {
-        BooleanUtils.or(new Boolean[] {});
-    }
-    
-    @Test(expected = IllegalArgumentException.class)
-    public void testOr_object_nullElementInput() {
-        BooleanUtils.or(new Boolean[] {null});
-    }
-    
-    @Test
-    public void testOr_object_validInput_2items() {
-        assertTrue(
-            "False result for (true, true)",
-            BooleanUtils
-            .or(new Boolean[] { Boolean.TRUE, Boolean.TRUE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils
-            .or(new Boolean[] { Boolean.FALSE, Boolean.FALSE })
-            .booleanValue());
-        
-        assertTrue(
-            "False result for (true, false)",
-            BooleanUtils
-            .or(new Boolean[] { Boolean.TRUE, Boolean.FALSE })
-            .booleanValue());
-        
-        assertTrue(
-            "False result for (false, true)",
-            BooleanUtils
-            .or(new Boolean[] { Boolean.FALSE, Boolean.TRUE })
-            .booleanValue());
-    }
-    
-    @Test
-    public void testOr_object_validInput_3items() {
-        assertTrue(
-            "False result for (false, false, true)",
-            BooleanUtils
-            .or(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.FALSE,
-                    Boolean.TRUE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (false, true, false)",
-            BooleanUtils
-            .or(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.TRUE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (true, false, false)",
-            BooleanUtils
-            .or(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.FALSE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (true, true, true)",
-            BooleanUtils
-            .or(new Boolean[] { Boolean.TRUE, Boolean.TRUE, Boolean.TRUE })
-            .booleanValue());
-        
-        assertTrue(
-            "True result for (false, false)",
-            ! BooleanUtils.or(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.FALSE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (true, true, false)",
-            BooleanUtils.or(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.TRUE,
-                    Boolean.FALSE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (true, false, true)",
-            BooleanUtils.or(
-                new Boolean[] {
-                    Boolean.TRUE,
-                    Boolean.FALSE,
-                    Boolean.TRUE })
-                    .booleanValue());
-        
-        assertTrue(
-            "False result for (false, true, true)",
-            BooleanUtils.or(
-                new Boolean[] {
-                    Boolean.FALSE,
-                    Boolean.TRUE,
-                    Boolean.TRUE })
-                    .booleanValue());
-    }
-    
 }
