@@ -16,32 +16,33 @@
  */
 package org.apache.commons.lang3;
 
-import static org.junit.Assert.*;
-
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
 
+import junit.framework.TestCase;
+
 import org.apache.commons.lang3.exception.CloneFailedException;
 import org.apache.commons.lang3.mutable.MutableObject;
-import org.junit.Test;
 
 /**
  * Unit tests {@link org.apache.commons.lang3.ObjectUtils}.
  *
- * @version $Id: ObjectUtilsTest.java 1153484 2011-08-03 13:39:42Z ggregory $
+ * @version $Id: ObjectUtilsTest.java 1091448 2011-04-12 15:13:36Z scolebourne $
  */
-public class ObjectUtilsTest {
+public class ObjectUtilsTest extends TestCase {
     private static final String FOO = "foo";
     private static final String BAR = "bar";
 
+    public ObjectUtilsTest(String name) {
+        super(name);
+    }
+
     //-----------------------------------------------------------------------
-    @Test
     public void testConstructor() {
         assertNotNull(new ObjectUtils());
         Constructor<?>[] cons = ObjectUtils.class.getDeclaredConstructors();
@@ -52,7 +53,6 @@ public class ObjectUtilsTest {
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void testIsNull() {
         Object o = FOO;
         Object dflt = BAR;
@@ -60,7 +60,6 @@ public class ObjectUtilsTest {
         assertSame("dflt was returned when o was not null", o, ObjectUtils.defaultIfNull(o, dflt));
     }
 
-    @Test
     public void testFirstNonNull() {
         assertEquals(null, ObjectUtils.firstNonNull(null, null));
         assertEquals("", ObjectUtils.firstNonNull(null, ""));
@@ -79,7 +78,6 @@ public class ObjectUtilsTest {
     }
 
     //-----------------------------------------------------------------------
-    @Test
     public void testEquals() {
         assertTrue("ObjectUtils.equals(null, null) returned false", ObjectUtils.equals(null, null));
         assertTrue("ObjectUtils.equals(\"foo\", null) returned true", !ObjectUtils.equals(FOO, null));
@@ -88,7 +86,6 @@ public class ObjectUtilsTest {
         assertTrue("ObjectUtils.equals(\"foo\", \"foo\") returned false", ObjectUtils.equals(FOO, FOO));
     }
 
-    @Test
     public void testNotEqual() {
         assertFalse("ObjectUtils.notEqual(null, null) returned false", ObjectUtils.notEqual(null, null));
         assertTrue("ObjectUtils.notEqual(\"foo\", null) returned true", ObjectUtils.notEqual(FOO, null));
@@ -97,25 +94,21 @@ public class ObjectUtilsTest {
         assertFalse("ObjectUtils.notEqual(\"foo\", \"foo\") returned false", ObjectUtils.notEqual(FOO, FOO));
     }
 
-    @Test
     public void testHashCode() {
         assertEquals(0, ObjectUtils.hashCode(null));
         assertEquals("a".hashCode(), ObjectUtils.hashCode("a"));
     }
 
-    @Test
     public void testHashCodeMulti_multiple_emptyArray() {
         Object[] array = new Object[0];
         assertEquals(1, ObjectUtils.hashCodeMulti(array));
     }
 
-    @Test
     public void testHashCodeMulti_multiple_nullArray() {
         Object[] array = null;
         assertEquals(1, ObjectUtils.hashCodeMulti(array));
     }
 
-    @Test
     public void testHashCodeMulti_multiple_likeList() {
         List<Object> list0 = new ArrayList<Object>(Arrays.asList());
         assertEquals(list0.hashCode(), ObjectUtils.hashCodeMulti());
@@ -171,13 +164,12 @@ public class ObjectUtilsTest {
 //        //assertFalse("java.util.Date and java.sql.Timestamp should be equal", ObjectUtils.equals(date, timestamp));
 //    }
     
-    @Test
     public void testIdentityToString() {
         assertEquals(null, ObjectUtils.identityToString(null));
         assertEquals(
             "java.lang.String@" + Integer.toHexString(System.identityHashCode(FOO)),
             ObjectUtils.identityToString(FOO));
-        Integer i = Integer.valueOf(90);
+        Integer i = new Integer(90);
         String expected = "java.lang.Integer@" + Integer.toHexString(System.identityHashCode(i));
         assertEquals(expected, ObjectUtils.identityToString(i));
         StringBuffer buffer = new StringBuffer();
@@ -196,26 +188,24 @@ public class ObjectUtilsTest {
         }
     }
 
-    @Test
     public void testToString_Object() {
         assertEquals("", ObjectUtils.toString((Object) null) );
         assertEquals(Boolean.TRUE.toString(), ObjectUtils.toString(Boolean.TRUE) );
     }
             
-    @Test
     public void testToString_ObjectString() {
         assertEquals(BAR, ObjectUtils.toString((Object) null, BAR) );
         assertEquals(Boolean.TRUE.toString(), ObjectUtils.toString(Boolean.TRUE, BAR) );
     }
 
-    @Test
     public void testNull() {
         assertNotNull(ObjectUtils.NULL);
         assertTrue(ObjectUtils.NULL instanceof ObjectUtils.Null);
         assertSame(ObjectUtils.NULL, SerializationUtils.clone(ObjectUtils.NULL));
     }
-
-    @Test
+    
+    
+    
     public void testMax() {
         Calendar calendar = Calendar.getInstance();
         Date nonNullComparable1 = calendar.getTime();
@@ -240,8 +230,7 @@ public class ObjectUtilsTest {
 
         assertNull( ObjectUtils.max((String)null, (String)null) );
     }
-
-    @Test
+    
     public void testMin() {
         Calendar calendar = Calendar.getInstance();
         Date nonNullComparable1 = calendar.getTime();
@@ -270,7 +259,6 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#compare(Comparable, Comparable, boolean)}.
      */
-    @Test
     public void testCompare() {
         Integer one = Integer.valueOf(1);
         Integer two = Integer.valueOf(2);
@@ -289,79 +277,9 @@ public class ObjectUtilsTest {
         assertEquals("one two true",  -1, ObjectUtils.compare(one, two, true));
     }
 
-    @Test
-    public void testMedian() {
-        assertEquals("foo", ObjectUtils.median("foo"));
-        assertEquals("bar", ObjectUtils.median("foo", "bar"));
-        assertEquals("baz", ObjectUtils.median("foo", "bar", "baz"));
-        assertEquals("baz", ObjectUtils.median("foo", "bar", "baz", "blah"));
-        assertEquals("blah", ObjectUtils.median("foo", "bar", "baz", "blah", "wah"));
-        assertEquals(Integer.valueOf(5),
-            ObjectUtils.median(Integer.valueOf(1), Integer.valueOf(5), Integer.valueOf(10)));
-        assertEquals(
-            Integer.valueOf(7),
-            ObjectUtils.median(Integer.valueOf(5), Integer.valueOf(6), Integer.valueOf(7), Integer.valueOf(8),
-                Integer.valueOf(9)));
-        assertEquals(Integer.valueOf(6),
-            ObjectUtils.median(Integer.valueOf(5), Integer.valueOf(6), Integer.valueOf(7), Integer.valueOf(8)));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void testMedian_nullItems() {
-        ObjectUtils.median((String[]) null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testMedian_emptyItems() {
-        ObjectUtils.<String> median();
-    }
-
-    @Test
-    public void testComparatorMedian() {
-        CharSequenceComparator cmp = new CharSequenceComparator();
-        NonComparableCharSequence foo = new NonComparableCharSequence("foo");
-        NonComparableCharSequence bar = new NonComparableCharSequence("bar");
-        NonComparableCharSequence baz = new NonComparableCharSequence("baz");
-        NonComparableCharSequence blah = new NonComparableCharSequence("blah");
-        NonComparableCharSequence wah = new NonComparableCharSequence("wah");
-        assertSame(foo, ObjectUtils.median(cmp, foo));
-        assertSame(bar, ObjectUtils.median(cmp, foo, bar));
-        assertSame(baz, ObjectUtils.median(cmp, foo, bar, baz));
-        assertSame(baz, ObjectUtils.median(cmp, foo, bar, baz, blah));
-        assertSame(blah, ObjectUtils.median(cmp, foo, bar, baz, blah, wah));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void testComparatorMedian_nullComparator() {
-        ObjectUtils.median((Comparator<CharSequence>) null, new NonComparableCharSequence("foo"));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void testComparatorMedian_nullItems() {
-        ObjectUtils.median(new CharSequenceComparator(), (CharSequence[]) null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testComparatorMedian_emptyItems() {
-        ObjectUtils.median(new CharSequenceComparator());
-    }
-
-    @SuppressWarnings("unchecked")
-    @Test
-    public void testMode() {
-        assertNull(ObjectUtils.mode((Object[]) null));
-        assertNull(ObjectUtils.mode());
-        assertNull(ObjectUtils.mode("foo", "bar", "baz"));
-        assertNull(ObjectUtils.mode("foo", "bar", "baz", "foo", "bar"));
-        assertEquals("foo", ObjectUtils.mode("foo", "bar", "baz", "foo"));
-        assertEquals(Integer.valueOf(9),
-            ObjectUtils.mode("foo", "bar", "baz", Integer.valueOf(9), Integer.valueOf(10), Integer.valueOf(9)));
-    }
-
     /**
      * Tests {@link ObjectUtils#clone(Object)} with a cloneable object.
      */
-    @Test
     public void testCloneOfCloneable() {
         final CloneableString string = new CloneableString("apache");
         final CloneableString stringClone = ObjectUtils.clone(string);
@@ -371,7 +289,6 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#clone(Object)} with a not cloneable object.
      */
-    @Test
     public void testCloneOfNotCloneable() {
         final String string = new String("apache");
         assertNull(ObjectUtils.clone(string));
@@ -380,21 +297,19 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#clone(Object)} with an uncloneable object.
      */
-    @Test(expected = NoSuchMethodException.class)
-    public void testCloneOfUncloneable() throws Throwable {
+    public void testCloneOfUncloneable() {
         final UncloneableString string = new UncloneableString("apache");
         try {
             ObjectUtils.clone(string);
             fail("Thrown " + CloneFailedException.class.getName() + " expected");
         } catch (final CloneFailedException e) {
-            throw e.getCause();
+            assertEquals(NoSuchMethodException.class, e.getCause().getClass());
         }
     }
 
     /**
      * Tests {@link ObjectUtils#clone(Object)} with an object array.
      */
-    @Test
     public void testCloneOfStringArray() {
         assertTrue(Arrays.deepEquals(
             new String[]{"string"}, ObjectUtils.clone(new String[]{"string"})));
@@ -403,7 +318,6 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#clone(Object)} with an array of primitives.
      */
-    @Test
     public void testCloneOfPrimitiveArray() {
         assertTrue(Arrays.equals(new int[]{1}, ObjectUtils.clone(new int[]{1})));
     }
@@ -411,7 +325,6 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#cloneIfPossible(Object)} with a cloneable object.
      */
-    @Test
     public void testPossibleCloneOfCloneable() {
         final CloneableString string = new CloneableString("apache");
         final CloneableString stringClone = ObjectUtils.cloneIfPossible(string);
@@ -421,7 +334,6 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#cloneIfPossible(Object)} with a not cloneable object.
      */
-    @Test
     public void testPossibleCloneOfNotCloneable() {
         final String string = new String("apache");
         assertSame(string, ObjectUtils.cloneIfPossible(string));
@@ -430,14 +342,13 @@ public class ObjectUtilsTest {
     /**
      * Tests {@link ObjectUtils#cloneIfPossible(Object)} with an uncloneable object.
      */
-    @Test(expected = NoSuchMethodException.class)
-    public void testPossibleCloneOfUncloneable() throws Throwable {
+    public void testPossibleCloneOfUncloneable() {
         final UncloneableString string = new UncloneableString("apache");
         try {
             ObjectUtils.cloneIfPossible(string);
             fail("Thrown " + CloneFailedException.class.getName() + " expected");
         } catch (final CloneFailedException e) {
-            throw e.getCause();
+            assertEquals(NoSuchMethodException.class, e.getCause().getClass());
         }
     }
 
@@ -466,43 +377,4 @@ public class ObjectUtilsTest {
         }
     }
 
-    static final class NonComparableCharSequence implements CharSequence {
-        final String value;
-
-        /**
-         * Create a new NonComparableCharSequence instance.
-         *
-         * @param value
-         */
-        public NonComparableCharSequence(String value) {
-            super();
-            Validate.notNull(value);
-            this.value = value;
-        }
-
-        public char charAt(int arg0) {
-            return value.charAt(arg0);
-        }
-
-        public int length() {
-            return value.length();
-        }
-
-        public CharSequence subSequence(int arg0, int arg1) {
-            return value.subSequence(arg0, arg1);
-        }
-
-        @Override
-        public String toString() {
-            return value;
-        }
-    }
-
-    static final class CharSequenceComparator implements Comparator<CharSequence> {
-
-        public int compare(CharSequence o1, CharSequence o2) {
-            return o1.toString().compareTo(o2.toString());
-        }
-
-    }
 }
