@@ -33,7 +33,7 @@ import junit.framework.TestCase;
 /**
  * Unit tests {@link org.apache.commons.lang3.SerializationUtils}.
  *
- * @version $Id: SerializationUtilsTest.java 1153484 2011-08-03 13:39:42Z ggregory $
+ * @version $Id: SerializationUtilsTest.java 1088899 2011-04-05 05:31:27Z bayard $
  */
 public class SerializationUtilsTest extends TestCase {
 
@@ -53,7 +53,7 @@ public class SerializationUtilsTest extends TestCase {
         super.setUp();
 
         iString = "foo";
-        iInteger = Integer.valueOf(7);
+        iInteger = new Integer(7);
         iMap = new HashMap<Object, Object>();
         iMap.put("FOO", iString);
         iMap.put("BAR", iInteger);
